hphp/test/zend/good/ext/gd/tests/dashedlines.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!function_exists('imagecreatefromstring')) die("skip gd extension not available\n");
}
