hphp/test/zend/bad/ext/mysqli/tests/mysqli_stmt_get_result_geom.php.skipif
<?php
	require_once('skipif.inc');
	require_once('skipifemb.inc');
	require_once('skipifconnectfailure.inc');

	if (!function_exists('mysqli_stmt_get_result'))
		die("skip mysqli_stmt_get_result() not available");

	if (!defined("MYSQLI_TYPE_GEOMETRY"))
		die("skip MYSQLI_TYPE_GEOMETRY not defined");
?>